# AI-Agents

OpenAI Agents SDK (Official docs)/: HandOffs.md
OpenAI Agents SDK (Official docs)/Agents/: agent.ipynb
OpenAI Agents SDK (Official docs)/agentic_env/: pyvenv.cfg
OpenAI Agents SDK (Official docs)/agentic_env/Scripts/: activate  activate.bat
OpenAI Agents SDK (Official docs)/examples/: 00_create_agent.py  01_mul_llm_agent.py  04_output_types.py
OpenAI Agents SDK (Official docs)/examples/1_agents/: 07_lifecycle_events.py  08_a_guardrail.py  08_b_guardrails.py  09_cloning_or_copying_agents.py  prac.ipynb
OpenAI Agents SDK (Official docs)/examples/2_Running agents/: conversations.db  conversations.db-shm  conversations.db-wal
OpenAI Agents SDK (Official docs)/examples/3_streaming/: 04_Run_item_events_and_agent_events.py
OpenAI Agents SDK (Official docs)/examples/4_REPL utility/: repl_loop.py
OpenAI Agents SDK (Official docs)/examples/5_Tools/: 01_project.py  01_web_search.py  02_file_search_tool.py  (+10 more)
agent SDK/01_hello_agent/: ENHANCED_TESTING_GUIDE.md  FALLBACK_SYSTEM.md  FINAL_TESTING_QUERIES.md  TOOL_TESTING_GUIDE.md  hello.py  pyproject.toml  requirements.txt  test_agent_improvements.py  test_all_tools_comprehensive.py  test_direct_tools.py  test_enhanced_agent.py  test_fallback.py  test_functions_direct.py  test_quick.py  test_quick_tools.py  test_tools.py
agent SDK/agent_01/: README.md  agent.py  prompts.py  requirements.txt
agent SDK/uv/uv_with_chainlit/: pyproject.toml
agent SDK/uv/uv_with_chainlit/src/uv_with_chainlit/: __init__.py  chatbot.py
(+22 files in other folders)
